objects/Delivery_Receipts__c.object
<CustomObject>
    <fields>
        <fullName>Message_Id__c</fullName>
        <description>mGage-assigned message ID that is given to a message when the MT send request
is received from your external system. It maps the message status to the original</description>
        <externalId>true</externalId>
        <label>Message Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message_Subid__c</fullName>
        <description>If the message is split because it’s longer than 160 characters, it will result in more than one status notification. The status notification for the first part of the message (or if the message is 160 characters or less, it will be for the entire message) will have a message_subid of 0. The second part of the message will have a subid of 1, the third of 2, etc.</description>
        <externalId>true</externalId>
        <label>Message Subid</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>carrier_SFDC2__c</fullName>
        <description>Carrier from which the subscriber MO originated.</description>
        <label>carrier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>channel_SFDC2__c</fullName>
        <description>Channel used for message delivery, such as SMS, WAP Push, MMS, or voice.</description>
        <label>channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SMS</fullName>
                </value>
                <value>
                    <fullName>WAP Push</fullName>
                </value>
                <value>
                    <fullName>MMS</fullName>
                </value>
                <value>
                    <fullName>Voice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>client_message_id__c</fullName>
        <description>(not used with Connect Messaging API)</description>
        <label>Client MessageId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date_format__c</fullName>
        <description>Indicates the format of the timestamp of the update_date parameter. For example,
a date_format of MM/dd/yyyy HH:mm:ss,SSS would indicate that the timestamp
is in the format 01/22/2010 14:54:18,541.</description>
        <label>Date Format</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inbound_address_SFDC2__c</fullName>
        <description>A source address hosted by mGage systems and registered with the carrier to which a subscriber sends a subscriber MO.</description>
        <label>Inbound Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>reporting_Key1__c</fullName>
        <description>Populated if these values were included when sending the message through the Connect Messaging API.</description>
        <label>Reporting Key1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reporting_key2__c</fullName>
        <description>Populated if these values were included when sending the message through the Connect Messaging API.</description>
        <label>Reporting Key2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>router__c</fullName>
        <description>The name of the mGage server that processed the message.</description>
        <label>router</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>The current status of the message as it relates to the carrier network. See ”Codes and Definitions” below
for status codes.</description>
        <label>status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>status_code__c</fullName>
        <description>Numeric value of carrier delivery status receipts</description>
        <label>Status Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>status_info__c</fullName>
        <description>Detailed information about the status code.</description>
        <label>Status Info</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>uaprof__c</fullName>
        <description>User agent profile contains information for content formatting purposes. This will
be included in the DR. Default value is null.</description>
        <label>uaprof</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>update_date__c</fullName>
        <description>A date/time stamp reflecting the system time on the mGage hosted router when
the carrier delivery status receipt was received.</description>
        <label>Update Date</label>
        <type>DateTime</type>
    </fields>
    <label>Delivery Receipts</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Device Address</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>